rounds collapse when all metas solved; fixed issue with solve modals hiding if they're for collapsed rounds

--- a/herring/puzzles/static/style.less
+++ b/herring/puzzles/static/style.less
@@ -282,6 +282,7 @@ button, a.button, input[type=submit] {
 }
 
 .modal {
+	visibility: visible;
 	position: fixed;
 	top: 0;
 	left: 0;
